benefits/static/css/styles.css
/* ... */
.radio-label {
  cursor: pointer;
}

.radio-input-group {
  gap: var(--radio-input-gap);
}

.radio-input-group:not(:first-child) {
  padding-top: calc(24rem / 16);
}

.radio-input {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: var(--radio-button-size);
  height: var(--radio-button-size);
  border: var(--border-width) solid var(--radio-input-color);
  margin: calc(3rem / 16) 0;
}

.radio-input:checked {
  background-color: var(--radio-input-color);
  box-shadow: inset 0 0 0 var(--border-width) var(--bs-white);
}

/* Media List */

:root {
  --media-item-icon-size: calc(64rem / 16);
  --media-item-gap: calc(24rem / 16);
  --media-item-icon-margin: calc(24rem / 16);
  --media-title-margin-top: calc(24rem / 16);
}

@media (min-width: 992px) {
  :root {
    --media-item-icon-size: calc(90rem / 16);
    --media-item-gap: calc(62rem / 16);
    --media-item-icon-margin: calc(32rem / 16);
    --media-title-margin-top: calc(32rem / 16);
  }
}

h1 + .media-list, /* A .media-list immediately following the h1: Enrollment Success, but not Eligibility Start */
.media-body--details p:not(:first-of-type) {
  /* All the p within .media-body--details, except for the first p - Any media item with more than one p */
  padding-top: calc(24rem / 16);
}

.media-title {
  margin-top: var(--media-title-margin-top);
  margin-bottom: calc(24rem / 16);
}

.media-list {
  gap: var(--media-item-gap);
  margin-bottom: calc(64rem / 16);
}

.media-list .media .media-line .icon {
  width: var(--media-item-icon-size);
  height: var(--media-item-icon-size);
  margin-right: var(--media-item-icon-margin);
}

.media-list .media .media-body--details,
.media-list .media .media-body--items li:first-child {
  padding-top: calc(5rem / 16);
}

.media-list .media .media-body--items li {
  list-style-type: disc;
}

/* Cards */

:root {
  --card-title-font-size: var(--font-size-18px);
  --card-title-line-height: calc(21.6rem / 16);
  --card-title-letter-spacing: 0.03em;
  --card-x-padding: calc(10rem / 16);
  --card-body-x-padding: 0;
  --card-body-y-padding: 0.75rem;
  --card-border-width: var(--font-size-12px);
  --card-max-width: 100%;
  --card-min-height: 100%;
}

@media (min-width: 992px) {
  :root {
    --card-title-font-size: var(--font-size-20px);
    --card-title-line-height: calc(24rem / 16);
    --card-title-letter-spacing: 0.05rem;
    --card-x-padding: calc(35rem / 16);
    --card-body-x-padding: calc(40rem / 16);
    --card-body-y-padding: 0;
    --card-border-width: var(--font-size-20px);
    --card-max-width: calc(340rem / 16);
    --card-min-height: calc(185rem / 16);
  }
}

a.card,
a.card:hover,
a.card:focus,
a.card:focus-visible {
  text-decoration: none;
}

.card {
  height: 75%;
  border-top: solid var(--card-border-width) var(--primary-color);
  border-radius: 8px;
  transition: 0.3s;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  padding: var(--card-body-y-padding) var(--card-x-padding);
  max-width: var(--card-max-width);
  min-height: var(--card-min-height);
}

.card:hover {
  border-top: solid var(--card-border-width) var(--hover-color);
}

.card .card-title {
  font-size: var(--card-title-font-size);
  line-height: var(--card-title-line-height);
  letter-spacing: var(--card-title-letter-spacing);
}

.card .card-body {
  padding: 0 var(--card-body-x-padding) !important;
}

/* Modal Dialogs */

:root {
  --modal-title-font-size: var(--font-size-24px);
  --modal-border-radius: 8px;
}

@media (min-width: 992px) {
  :root {
    --modal-title-font-size: var(--font-size-35px);
    --modal-border-radius: 4px;
  }
}

.btn-close {
  width: 20px;
  height: 20px;
  opacity: 1;
  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23323A45'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e")
    center/1em auto no-repeat;
}

.modal-dialog {
  width: auto;
  height: auto;
}

.modal-content {
  border-radius: var(--modal-border-radius);
}

/* This is to stop Bootstrap from shifting the page behind the modal - see https://stackoverflow.com/q/32862394 */
.modal-open {
  padding-right: 0 !important;
}

.modal-dialog * {
  color: var(--text-primary-color);
}

.btn-close {
  color: var(--text-primary-color);
}

.modal-title {
  font-size: var(--modal-title-font-size);
}

.modal-trigger--link {
  background: transparent;
  border: none;
  color: var(--primary-color);
  font-family: var(--bs-body-font-family);
  font-weight: var(--bold-font-weight);
  letter-spacing: var(--body-letter-spacing);
  padding: 0;
  margin-right: -5px;
  text-decoration: underline;
  text-decoration-style: solid;
}

.modal-trigger--link::after {
  content: " ";
  background-image: url("/static/img/modal-trigger.svg");
  background-size: contain;
  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
  margin-left: 2px;
  vertical-align: text-bottom;
}

.modal-trigger--link:hover::after {
  background-image: url("/static/img/modal-trigger--hover.svg");
}

.modal-trigger--link:visited::after {
  background-image: url("/static/img/modal-trigger--selected.svg");
}

/* Enrollment Success */
/* Custom in-line log out button for Enrollment Success, in paragraph */

:root {
  --success-illo-width: 180px;
  --success-illo-height: 155.1px;
}

@media (min-width: 992px) {
  :root {
    --success-illo-width: 345px;
    --success-illo-height: 297px;
  }
}

.enrollment-success .illo {
  width: var(--success-illo-width);
  height: var(--success-illo-height);
}
/* ... */

